Specify rounding behavior

--- a/index.src.html
+++ b/index.src.html
@@ -4137,7 +4137,8 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     6. Assign a new {{VideoFrameMetadata}} to |frame|.{{VideoFrame/[[metadata]]}}.
 
 : <dfn for=VideoFrame>Parse Rotation</dfn> (with |rotation|)
-::  1. Let |alignedRotation| be the nearest multiple of `90` to |rotation|.
+::  1. Let |alignedRotation| be the nearest multiple of `90` to |rotation|,
+        rounding ties towards positive infinity.
     2. Let |fullTurns| be the greatest multiple of `360` less than or equal to
         |alignedRotation|.
     3. Return `|alignedRotation| - |fullTurns|`.
