Specify rendering behavior

--- a/index.src.html
+++ b/index.src.html
@@ -4396,6 +4396,11 @@ Color space conversion during {{ImageBitmap}} construction is controlled by
 {{ImageBitmapOptions}} {{ImageBitmapOptions/colorSpaceConversion}}. Setting this
 value to {{ColorSpaceConversion/"none"}} disables color space conversion.
 
+The rendering of a {{VideoFrame}} is produced from the [=media resource=] by
+applying any necessary color space conversion, cropping to the
+{{VideoFrame/visibleRect}}, rotating clockwise by {{VideoFrame/rotation}}
+degrees, and flipping horizontally if {{VideoFrame/flip}} is `true`.
+
 VideoFrame CopyTo() Options {#videoframe-copyto-options}
 ------------------------------------------------------------
 Options to specify a rectangle of pixels to copy, their format, and the offset
