Update references to mediacapture-extensions.

--- a/video_frame_metadata_registry.src.html
+++ b/video_frame_metadata_registry.src.html
@@ -63,15 +63,15 @@ VideoFrameMetadata members {#videoframemetadata-members}
   </tr>
   <tr>
     <td>captureTime</td>
-    <td>[Capture time](https://wicg.github.io/video-rvfc/#dom-videoframecallbackmetadata-capturetime)</td>
+    <td>[Capture time](https://w3c.github.io/mediacapture-extensions/#dfn-capture-timestamp)</td>
   </tr>
   <tr>
     <td>receiveTime</td>
-    <td>[Receive time](https://wicg.github.io/video-rvfc/#dom-videoframecallbackmetadata-receivetime)</td>
+    <td>[Receive time](https://w3c.github.io/mediacapture-extensions/#dfn-receive-timestamp)</td>
   </tr>
   <tr>
     <td>rtpTimestamp</td>
-    <td>[RTP timestamp](https://wicg.github.io/video-rvfc/#dom-videoframecallbackmetadata-rtptimestamp)</td>
+    <td>[RTP timestamp](https://w3c.github.io/mediacapture-extensions/#dfn-rtp-timestamp)</td>
   </tr>
 </table>
 
