A control message should always return either "processed" or "not processed".
flush() control message didn't return anything. We return "processed".

--- a/index.src.html
+++ b/index.src.html
@@ -484,6 +484,7 @@ Methods {#audiodecoder-methods}
             2. Remove |promise| from
                 {{AudioDecoder/[[pending flush promises]]}}.
             3. Resolve |promise|.
+    2. Return `"processed"`.
   </dd>
 
   <dt><dfn method for=AudioDecoder>reset()</dfn></dt>
@@ -829,6 +830,7 @@ Methods {#videodecoder-methods}
             2. Remove |promise| from
                 {{VideoDecoder/[[pending flush promises]]}}.
             3. Resolve |promise|.
+    2. Return `"processed"`.
   </dd>
 
   <dt><dfn method for=VideoDecoder>reset()</dfn></dt>
@@ -1167,6 +1169,7 @@ Methods {#audioencoder-methods}
             2. Remove |promise| from
                 {{AudioEncoder/[[pending flush promises]]}}.
             3. Resolve |promise|.
+    2. Return `"processed"`.
   </dd>
 
   <dt><dfn method for=AudioEncoder>reset()</dfn></dt>
@@ -1542,6 +1545,7 @@ Methods {#videoencoder-methods}
             2. Remove |promise| from
                 {{VideoEncoder/[[pending flush promises]]}}.
             3. Resolve |promise|.
+    2. Return `"processed"`.
   </dd>
 
   <dt><dfn method for=VideoEncoder>reset()</dfn></dt>
