Handle case with no rotation/flip for ImageDecoder.

--- a/index.src.html
+++ b/index.src.html
@@ -5758,7 +5758,8 @@ interface ImageDecoder {
                     metadata without further decoding, assign that to |timestamp|.
                 4. Otherwise, assign `0` to |timestamp|.
         4. If {{ImageDecoder/[[encoded data]]}} contains orientation metadata
-            describe it as |rotation| and |flip|.
+            describe it as |rotation| and |flip|, otherwise set |rotation| to 0
+            and |flip| to false.
         5. Assign {{ImageDecodeResult/image}} with the result of running the
             [=Create a VideoFrame=] algorithm with |output|, |timestamp|,
             |duration|, |rotation|, and |flip|.
@@ -5826,7 +5827,8 @@ interface ImageDecoder {
                 metadata without further decoding, assign that to |timestamp|.
             4. Otherwise, assign `0` to |timestamp|.
     17. If {{ImageDecoder/[[encoded data]]}} contains orientation metadata
-        describe it as |rotation| and |flip|.
+        describe it as |rotation| and |flip|, otherwise set |rotation| to 0
+        and |flip| to false.
     18. Assign {{ImageDecodeResult/image}} with the result of running the
         [=Create a VideoFrame=] algorithm with |output|, |timestamp|,
         |duration|, |rotation|, and |flip|.
