Accept suggestion to clarify active orientation setting.
Co-authored-by: Paul Adenot <paul@paul.cx>

--- a/index.src.html
+++ b/index.src.html
@@ -1499,8 +1499,8 @@ Methods {#videoencoder-methods}
     3. If {{VideoEncoder/[[active orientation]]}} is not `null` and does not match
         |frame|'s {{VideoFrame/[[rotation]]}} and {{VideoFrame/[[flip]]}} throw a
         {{DataError}}.
-    4. If {{VideoEncoder/[[active orientation]]}} is `null`, assign |frame|'s
-        {{VideoFrame/[[rotation]]}} and {{VideoFrame/[[flip]]}} to it.
+    4. If {{VideoEncoder/[[active orientation]]}} is `null`, set it to |frame|'s
+        {{VideoFrame/[[rotation]]}} and {{VideoFrame/[[flip]]}}.
     5. Let |frameClone| hold the result of running the [=Clone VideoFrame=]
         algorithm with |frame|.
     6. Increment {{VideoEncoder/[[encodeQueueSize]]}}.
